# purge_protocol

./: .gitignore  CMakeLists.txt  README.md
assets/models/: btn_play.fbx  btn_quit.fbx  console_ending_001.fbx  console_ending_002.fbx  console_ending_003.fbx  console_ending_004.fbx  console_ending_005.fbx  console_game_over_001.fbx  console_game_over_002.fbx  console_game_over_003.fbx  console_game_over_004.fbx  console_initializing_purge.fbx  console_on.fbx  console_processing_answer.fbx  console_ship.fbx  console_start.fbx  console_status.fbx  console_test_001.fbx  console_test_001_result.fbx  console_test_002.fbx  console_test_002_result.fbx  console_test_003.fbx  console_test_003_result.fbx  console_test_004.fbx  console_test_004_result.fbx  console_test_005.fbx  console_test_005_result.fbx  console_test_006.fbx  console_test_006_result.fbx  console_test_007.fbx  console_test_007_result.fbx  console_test_008.fbx  console_test_008_result.fbx  console_test_009.fbx  console_test_009_result.fbx  console_test_010.fbx  console_test_010_result.fbx  console_test_011.fbx  console_test_011_result.fbx  console_test_012.fbx  (+15 more)
assets/scripts/prefabs/: camera.lua  console_ending_001.lua  console_ending_002.lua  console_ending_003.lua  console_ending_004.lua  console_ending_005.lua  console_ending_006.lua  console_game_over_000.lua  console_game_over_001.lua  console_game_over_002.lua  console_game_over_003.lua  console_game_over_004.lua  (+51 more)
assets/textures/: cursor.tga  smoke.tga
raw/: console_output.blend  console_output.blend1  room.blend  room.blend1
src/pc/: Main.cpp
(+27 files in other folders)
